@startuml
!include style.puml
skinparam arrowThickness 1.1
skinparam arrowColor MODEL_COLOR
skinparam classBackgroundColor MODEL_COLOR

AddressBook *-right-> "1" UniquePersonList
AddressBook *-right-> "1" UniqueTagList
UniqueTagList -[hidden]down- UniquePersonList
UniqueTagList -[hidden]down- UniquePersonList

UniqueTagList -right-> "*" Tag
UniquePersonList -right-> "*" Person

Person -up-> "*" Tag

class Person {
}

class Patient {
}

Person <|-- Patient

Person *--> "1" Name
Person *--> "1" Phone
Person *--> "1" Address
Patient *--> "*" Note
Patient *--> "0..1" Appointment


@enduml
